# shoc

./: .gitignore  CMakeLists.txt  Cmake.sh  configure  configure.ac
config/: common.mk.in  config.h  config.h.cmake  targets.mk.in
docs/: Makefile.in
include/shoc/: shoci.h.in
src/: CMakeLists.txt  Makefile.am
src/common/: CMakeLists.txt
src/cuda/: CMakeLists.txt  Makefile.in
src/cuda/level0/: CMakeLists.txt  Makefile.in
src/cuda/level0/epmpi/: Makefile.in
src/cuda/level1/: CMakeLists.txt  Makefile.in
src/cuda/level1/bfs/: CMakeLists.txt  Makefile.in
src/cuda/level1/bfs/epmpi/: Makefile.in
src/cuda/level1/fft/: CMakeLists.txt  Makefile.in
src/cuda/level1/fft/epmpi/: Makefile.in
src/cuda/level1/gemm/: CMakeLists.txt  Makefile.in
src/cuda/level1/gemm/epmpi/: Makefile.in
src/cuda/level1/md/: CMakeLists.txt  Makefile.in
src/cuda/level1/md/epmpi/: Makefile.in
src/cuda/level1/md5hash/: CMakeLists.txt  Makefile.in
src/cuda/level1/md5hash/epmpi/: Makefile.in
src/cuda/level1/neuralnet/: CMakeLists.txt
src/cuda/level1/reduction/: CMakeLists.txt  Makefile.in
src/cuda/level1/reduction/epmpi/: Makefile.in
src/cuda/level1/reduction/tpmpi/: Makefile.in
src/cuda/level1/scan/: CMakeLists.txt  Makefile.in
src/cuda/level1/scan/epmpi/: Makefile.in
src/cuda/level1/scan/tpmpi/: Makefile.in
src/cuda/level1/sort/: CMakeLists.txt  Makefile.in
src/cuda/level1/sort/epmpi/: Makefile.in
src/cuda/level1/spmv/: CMakeLists.txt  Makefile.in
src/cuda/level1/spmv/epmpi/: Makefile.in
src/cuda/level1/stencil2d/: CMakeLists.txt  Makefile.in
src/cuda/level1/stencil2d/tpmpi/: Makefile.in
src/cuda/level1/triad/: CMakeLists.txt  Makefile.in
src/cuda/level1/triad/epmpi/: Makefile.in
src/cuda/level2/: CMakeLists.txt  Makefile.in
src/cuda/level2/qtclustering/: CMakeLists.txt  Makefile.in  QTC.cu  kernels_common.h
src/cuda/level2/qtclustering/tpmpi/: Makefile.in
src/cuda/level2/s3d/: CMakeLists.txt  Makefile.in
src/cuda/level2/s3d/epmpi/: Makefile.in
src/hip/: CMakeLists.txt
src/hip/common/: CUDAPMSMemMgr.h  PMSMemMgmt.h  cudacommon.h  main.cpp  support.h
src/hip/level0/: CMakeLists.txt  DeviceMemory.cu  MaxFlops.cu
src/hip/level0/epmpi/: Makefile.am  Makefile.in
src/hip/level1/: CMakeLists.txt
src/hip/level1/bfs/: BFS.cu  CMakeLists.txt  bfs_kernel.cu  bfs_kernel.h
src/hip/level1/bfs/epmpi/: Makefile.am  Makefile.in
src/hip/level1/fft/: CMakeLists.txt  FFT.cpp  fftlib.cu
src/hip/level1/gemm/: CMakeLists.txt  GEMM.cpp
src/hip/level1/md/: CMakeLists.txt  MD.cu  MD.h
src/hip/level1/md5hash/: CMakeLists.txt  MD5Hash.cu
src/hip/level1/neuralnet/: CMakeLists.txt
src/hip/level1/reduction/: CMakeLists.txt  Reduction.cu  reduction_kernel.h  tpRedLaunchKernel.cu  tpReduction.cpp
src/hip/level1/scan/: CMakeLists.txt  Scan.cu  scan_kernel.h  tpScan.cpp  tpScanLaunchKernel.cu
src/hip/level1/sort/: CMakeLists.txt  Sort.cu  sort_kernel.cu  sort_kernel.h
src/hip/level1/spmv/: CMakeLists.txt  Spmv.cu
src/hip/level1/stencil2d/: CMakeLists.txt  CUDAStencilKernel.cu  MPICUDAStencil.cpp  Stencil2Dmain.cpp
src/hip/level1/triad/: CMakeLists.txt  Triad.cu
src/hip/level2/: CMakeLists.txt
src/hip/level2/qtclustering/: CMakeLists.txt  QTC.cu
src/hip/level2/s3d/: CMakeLists.txt  S3D.cu  S3D.h  gr_base.h  ratt.h  ratt2.h  ratx.h  rdwdot.h
src/mpi/: CMakeLists.txt
src/mpi/common/: CMakeLists.txt
src/mpi/contention/: CMakeLists.txt  Makefile.in
src/mpi/contention-mt/: CMakeLists.txt  Makefile.am  Makefile.in
src/mpi/contention-mt/cuda/: CMakeLists.txt  Makefile.in
src/mpi/contention-mt/hip/: CMakeLists.txt  CUDADriver.cpp
src/mpi/contention-mt/opencl/: CMakeLists.txt  Makefile.in
src/mpi/contention/cuda/: CMakeLists.txt  Makefile.in
src/mpi/contention/hip/: CMakeLists.txt  CUDADriver.cpp
src/mpi/contention/opencl/: CMakeLists.txt  Makefile.in
src/opencl/: CMakeLists.txt
src/opencl/common/: CMakeLists.txt
src/opencl/level0/: CMakeLists.txt  Makefile.in
src/opencl/level0/epmpi/: Makefile.in
src/opencl/level1/: CMakeLists.txt  Makefile.in
src/opencl/level1/bfs/: CMakeLists.txt  Makefile.in
src/opencl/level1/bfs/epmpi/: Makefile.in
src/opencl/level1/fft/: Makefile.in
src/opencl/level1/fft/epmpi/: Makefile.in
src/opencl/level1/gemm/: Makefile.in
src/opencl/level1/gemm/epmpi/: Makefile.in
src/opencl/level1/md/: Makefile.in
src/opencl/level1/md/epmpi/: Makefile.in
src/opencl/level1/md5hash/: Makefile.in
src/opencl/level1/md5hash/epmpi/: Makefile.in
src/opencl/level1/reduction/: Makefile.in
src/opencl/level1/reduction/epmpi/: Makefile.in
src/opencl/level1/reduction/tpmpi/: Makefile.in
src/opencl/level1/scan/: Makefile.in
src/opencl/level1/scan/epmpi/: Makefile.in
src/opencl/level1/scan/tpmpi/: Makefile.in
src/opencl/level1/sort/: Makefile.in
src/opencl/level1/sort/epmpi/: Makefile.in
src/opencl/level1/spmv/: Makefile.in
src/opencl/level1/spmv/epmpi/: Makefile.in
src/opencl/level1/stencil2d/: Makefile.in
src/opencl/level1/stencil2d/tpmpi/: Makefile.in
src/opencl/level1/triad/: Makefile.in
src/opencl/level1/triad/epmpi/: Makefile.in
src/opencl/level2/: Makefile.in
src/opencl/level2/s3d/: Makefile.in
src/opencl/level2/s3d/epmpi/: Makefile.in
src/stability/: CMakeLists.txt  Makefile.in
src/stability/epmpi/: Makefile.in
tools/: CMakeLists.txt  Makefile.in  driver.pl  numatest.pl  shocdriver.in.cmake
